Update dependencies, enhance ticket management features, and refine global styles. Added Prisma for database interactions, integrated new UI components for ticket creation and editing, and improved animations. Removed unused data file and updated the .gitignore to exclude generated files.

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -7,22 +7,67 @@
   --default-transition-duration: 0.261s;
   --default-transition-timing-function: linear(
     0,
-    0.12579706169342741,
-    0.3467757943350869,
-    0.5498041586583666,
-    0.7048746116097578,
-    0.813091309791006,
-    0.8846146654420873,
-    0.9301768570439657,
-    0.9584289460261878,
-    0.975585555311516,
-    0.9858300032519769,
-    0.9918614554565455,
-    0.9953696713583585,
-    0.9973885246883144,
-    0.998539158605641,
-    0.9991891744854966,
+    0.003 0.4%,
+    0.012 0.9%,
+    0.027 1.4%,
+    0.05 2%,
+    0.111 3.3%,
+    0.316 7.2%,
+    0.411 9.2%,
+    0.466 10.5%,
+    0.517 11.8%,
+    0.566 13.2%,
+    0.611 14.6%,
+    0.653 16.1%,
+    0.694 17.7%,
+    0.732 19.4%,
+    0.765 21.1%,
+    0.796 22.9%,
+    0.824 24.8%,
+    0.849 26.8%,
+    0.872 28.9%,
+    0.892 31.1%,
+    0.91 33.4%,
+    0.925 35.8%,
+    0.939 38.4%,
+    0.95 41.1%,
+    0.961 44.1%,
+    0.97 47.4%,
+    0.977 50.9%,
+    0.987 58.7%,
+    0.994 68.4%,
+    0.998 81.1%,
     1
+  );
+
+  --ease-spring: linear(
+    0,
+    0.0012 0.47%,
+    0.0062 1.09%,
+    0.0265 2.34%,
+    0.0633,
+    0.1114 5.15%,
+    0.2227 7.8%,
+    0.4803 13.26%,
+    0.5916 15.76%,
+    0.6979,
+    0.7891 21.07%,
+    0.8603 23.56%,
+    0.9208 26.22%,
+    0.9469,
+    0.9692,
+    0.9879,
+    1.0034 31.83%,
+    1.0229 34.17%,
+    1.0362 36.67%,
+    1.0437 39.32%,
+    1.046 42.29%,
+    1.0447 44.63%,
+    1.0407 47.44%,
+    1.0119 61.79%,
+    1.0026 69.6%,
+    0.9981 80.52%,
+    0.9991 99.87%
   );
 
   --animate-fade-from-top: fade-from-top 0.5s
