feat: add fade-from-left animation and enhance sidebar functionality; update server action page and improve user authentication handling

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -103,6 +103,27 @@
       1
     );
 
+  --animate-fade-from-left: fade-from-left 0.5s
+    linear(
+      0,
+      0.12579706169342741,
+      0.3467757943350869,
+      0.5498041586583666,
+      0.7048746116097578,
+      0.813091309791006,
+      0.8846146654420873,
+      0.9301768570439657,
+      0.9584289460261878,
+      0.975585555311516,
+      0.9858300032519769,
+      0.9918614554565455,
+      0.9953696713583585,
+      0.9973885246883144,
+      0.998539158605641,
+      0.9991891744854966,
+      1
+    );
+
   @keyframes fade-from-top {
     from {
       opacity: 0;
@@ -111,6 +132,17 @@
     to {
       opacity: 1;
       transform: translateY(0);
+    }
+  }
+
+  @keyframes fade-from-left {
+    from {
+      opacity: 0;
+      transform: translateX(-16px);
+    }
+    to {
+      opacity: 1;
+      transform: translateX(0);
     }
   }
 }
