--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -55,123 +55,163 @@
 
   --ease-spring: linear(
     0,
-    0.0012 0.47%,
-    0.0062 1.09%,
-    0.0265 2.34%,
-    0.0633,
-    0.1114 5.15%,
-    0.2227 7.8%,
-    0.4803 13.26%,
-    0.5916 15.76%,
-    0.6979,
-    0.7891 21.07%,
-    0.8603 23.56%,
-    0.9208 26.22%,
-    0.9469,
-    0.9692,
-    0.9879,
-    1.0034 31.83%,
-    1.0229 34.17%,
-    1.0362 36.67%,
-    1.0437 39.32%,
-    1.046 42.29%,
-    1.0447 44.63%,
-    1.0407 47.44%,
-    1.0119 61.79%,
-    1.0026 69.6%,
-    0.9981 80.52%,
-    0.9991 99.87%
+    0.004 0.6%,
+    0.015 1.2%,
+    0.036 1.9%,
+    0.066 2.7%,
+    0.13 4.1%,
+    0.341 8.2%,
+    0.451 10.5%,
+    0.558 13.1%,
+    0.605 14.4%,
+    0.647 15.7%,
+    0.688 17.1%,
+    0.727 18.6%,
+    0.761 20.1%,
+    0.793 21.7%,
+    0.821 23.3%,
+    0.847 25%,
+    0.87 26.8%,
+    0.891 28.7%,
+    0.909 30.7%,
+    0.925 32.8%,
+    0.938 35%,
+    0.951 37.4%,
+    0.961 40%,
+    0.97 42.8%,
+    0.983 49.2%,
+    0.991 56.6%,
+    0.996 66.1%,
+    0.999 79%,
+    1
   );
 
-  --animate-fade-from-top: fade-from-top 0.5s
+  --animate-fade-from-top: fade-from-top 0.8s
     linear(
       0,
-      0.12579706169342741,
-      0.3467757943350869,
-      0.5498041586583666,
-      0.7048746116097578,
-      0.813091309791006,
-      0.8846146654420873,
-      0.9301768570439657,
-      0.9584289460261878,
-      0.975585555311516,
-      0.9858300032519769,
-      0.9918614554565455,
-      0.9953696713583585,
-      0.9973885246883144,
-      0.998539158605641,
-      0.9991891744854966,
+      0.004 0.6%,
+      0.015 1.2%,
+      0.036 1.9%,
+      0.066 2.7%,
+      0.13 4.1%,
+      0.341 8.2%,
+      0.451 10.5%,
+      0.558 13.1%,
+      0.605 14.4%,
+      0.647 15.7%,
+      0.688 17.1%,
+      0.727 18.6%,
+      0.761 20.1%,
+      0.793 21.7%,
+      0.821 23.3%,
+      0.847 25%,
+      0.87 26.8%,
+      0.891 28.7%,
+      0.909 30.7%,
+      0.925 32.8%,
+      0.938 35%,
+      0.951 37.4%,
+      0.961 40%,
+      0.97 42.8%,
+      0.983 49.2%,
+      0.991 56.6%,
+      0.996 66.1%,
+      0.999 79%,
       1
     );
 
-  --animate-fade-from-left: fade-from-left 0.5s
+  --animate-fade-from-left: fade-from-left 0.8s
     linear(
       0,
-      0.12579706169342741,
-      0.3467757943350869,
-      0.5498041586583666,
-      0.7048746116097578,
-      0.813091309791006,
-      0.8846146654420873,
-      0.9301768570439657,
-      0.9584289460261878,
-      0.975585555311516,
-      0.9858300032519769,
-      0.9918614554565455,
-      0.9953696713583585,
-      0.9973885246883144,
-      0.998539158605641,
-      0.9991891744854966,
+      0.004 0.6%,
+      0.015 1.2%,
+      0.036 1.9%,
+      0.066 2.7%,
+      0.13 4.1%,
+      0.341 8.2%,
+      0.451 10.5%,
+      0.558 13.1%,
+      0.605 14.4%,
+      0.647 15.7%,
+      0.688 17.1%,
+      0.727 18.6%,
+      0.761 20.1%,
+      0.793 21.7%,
+      0.821 23.3%,
+      0.847 25%,
+      0.87 26.8%,
+      0.891 28.7%,
+      0.909 30.7%,
+      0.925 32.8%,
+      0.938 35%,
+      0.951 37.4%,
+      0.961 40%,
+      0.97 42.8%,
+      0.983 49.2%,
+      0.991 56.6%,
+      0.996 66.1%,
+      0.999 79%,
       1
     );
 
-  --animate-fade-from-bottom: fade-from-bottom 0.5s
+  --animate-fade-from-bottom: fade-from-bottom 0.8s
     linear(
       0,
-      0.12579706169342741,
-      0.3467757943350869,
-      0.5498041586583666,
-      0.7048746116097578,
-      0.813091309791006,
-      0.8846146654420873,
-      0.9301768570439657,
-      0.9584289460261878,
-      0.975585555311516,
-      0.9858300032519769,
-      0.9918614554565455,
-      0.9953696713583585,
-      0.9973885246883144,
-      0.998539158605641,
-      0.9991891744854966,
+      0.004 0.6%,
+      0.015 1.2%,
+      0.036 1.9%,
+      0.066 2.7%,
+      0.13 4.1%,
+      0.341 8.2%,
+      0.451 10.5%,
+      0.558 13.1%,
+      0.605 14.4%,
+      0.647 15.7%,
+      0.688 17.1%,
+      0.727 18.6%,
+      0.761 20.1%,
+      0.793 21.7%,
+      0.821 23.3%,
+      0.847 25%,
+      0.87 26.8%,
+      0.891 28.7%,
+      0.909 30.7%,
+      0.925 32.8%,
+      0.938 35%,
+      0.951 37.4%,
+      0.961 40%,
+      0.97 42.8%,
+      0.983 49.2%,
+      0.991 56.6%,
+      0.996 66.1%,
+      0.999 79%,
       1
     );
 
   @keyframes fade-from-bottom {
     from {
       opacity: 0;
-      transform: translateY(16px);
+      transform: translateY(24px);
     }
     to {
       opacity: 1;
       transform: translateY(0);
     }
   }
-
   @keyframes fade-from-top {
     from {
       opacity: 0;
-      transform: translateY(-16px);
+      transform: translateY(-24px);
     }
     to {
       opacity: 1;
       transform: translateY(0);
     }
   }
-
   @keyframes fade-from-left {
     from {
       opacity: 0;
-      transform: translateX(-16px);
+      transform: translateX(-24px);
     }
     to {
       opacity: 1;
